update các status cho history, fix bug reload manage ticket

--- a/scc-mvc/src/main/resources/templates/followticket.html
+++ b/scc-mvc/src/main/resources/templates/followticket.html
@@ -231,7 +231,7 @@
             </div>
             <div style="border-top: solid 1px lightgray;width: 250px;margin-top:8px" >
                <!--<button  style="margin-left: 70px;margin-top: 10px" class="btn btn-default" onclick="showhistory()">Show history</button>-->
-                <input style="margin-left: 70px;margin-top: 10px" type="checkbox" onclick="showhistory()">Show history
+                <input style="margin-left: 70px;margin-top: 10px" type="checkbox" id="historycheckbox" onclick="showhistory()">Show history
             </div>
 
         </section>
