--- a/scc-mvc/src/main/resources/templates/manageticket.html
+++ b/scc-mvc/src/main/resources/templates/manageticket.html
@@ -26,17 +26,7 @@
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
-            <h1>
-                Ticket management
-            </h1>
-            <span id="topbtn" class="pull-right">
 
-                  <button class="btn btn-info btn-md " type="button" onclick="configpriority()">
-                   <i class="fa fa-cogs" aria-hidden="true"></i> <strong>Config Priority</strong>
-                  </button>
-
-
-       </span>
         </section>
 
         <!-- Main content -->
@@ -284,14 +274,23 @@
 
                 </div>
             </div>
+
             <div class="row">
                 <section class="col-lg-12">
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="box">
+                            <div id="pageToCrawl"
+                                 style="margin-top: 10px;margin-bottom: 10px;margin-left: 10px; background-color: white; padding: 10px 20px 20px 20px">
 
+                                <h2>
+                                    Ticket management
+                                </h2>
+                                <span id="topbtn" class="pull-right">
+                                    <button class="btn btn-info btn-md " type="button" onclick="configpriority()">
+                                    <i class="fa fa-cogs" aria-hidden="true"></i> <strong>Config Priority</strong>
+                                    </button>
+                                </span>
                                 <!-- /.box-header -->
-                                <div class="box-body table-responsive no-padding">
                                     <table id="table" class="table table-striped table-bordered" style="width:100%">
                                         <thead>
 
@@ -310,7 +309,7 @@
                                         </tr>
                                         </tfoot>
                                     </table>
-                                </div>
+
                             </div>
                         </div>
                     </div>
