sort ticket khi add item

--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -236,6 +236,18 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Tickets in the system</h4>
+                        <div class="inline">
+                            <div class="inline">Sort by :</div>
+                            <div class=" inline" style="margin-right: 10px">
+
+                                <input style="padding-top: 100px" type="checkbox" id="tksttcheckbox" >
+                                <h5 class=" inline">Status</h5>
+                            </div>
+                            <div class=" inline" style="margin-right: 10px">
+                                <label><input style="margin-top: 10px" type="checkbox" id="tktimecheckbox" >Time</label>
+                            </div>
+
+                        </div>
                     </div>
                     <div class="modal-body" id="ticket-list">
                         <div class="ticket-row" >
