--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -388,7 +388,7 @@
 }
 
 .ticket .title {
-    background-color: cornflowerblue;
+    /*background-color: cornflowerblue;*/
     margin-left: -10px;
     font-size: 20px;
     color: white;
