commit chỉ để merge

--- a/scc-mvc/src/main/resources/static/css/mini-messenger.css
+++ b/scc-mvc/src/main/resources/static/css/mini-messenger.css
@@ -169,3 +169,8 @@
     text-overflow: ellipsis;
     width: 190px;
 }
+
+.popup-message{
+    margin: 13px 0px 0px 0px;
+    background-color: #00a7d0;
+}
