I coded something but i forgot

--- a/scc-mvc/src/main/resources/templates/admin/index.html
+++ b/scc-mvc/src/main/resources/templates/admin/index.html
@@ -109,7 +109,8 @@
                                 '<div style="font-size: 13px; color: black; margin-left: 60px">'+data[index].category+'</div>' +
                                 '</div>'+
                                 '<div style="height: 70px;" class="brand-item col-lg-6">' +
-                                '<div style="margin-top: 10px"><span class="fa fa-comment" style="color: lightgray"></span><span>106</span></div>'+
+                                '<div style="margin-top: 10px"><span class="fa fa-pencil" style="color: lightgray;margin-right: 10px"></span><span>106</span>&nbsp;posts</div>'+
+                                '<div ><span class="fa fa-comment fa-flip-horizontal" style="color: lightgray;margin-right: 10px"></span><span>106</span>&nbsp;comments</div>'+
                                 '</div></div>'
                         );
                     });
