--- a/scc-mvc/src/main/resources/templates/manageticket.html
+++ b/scc-mvc/src/main/resources/templates/manageticket.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <title>Social Customer Care</title>
-    <header class="main-header" th:include="head::header"></header>
-    <aside class="main-sidebar" th:include="sidebar::aside"></aside>
+    <header class="main-header" th:include="Head::header"></header>
+    <aside class="main-sidebar" th:include="SideBar::aside"></aside>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"/>
 
     <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
