--- a/scc-mvc/src/main/resources/static/css/mini-messenger.css
+++ b/scc-mvc/src/main/resources/static/css/mini-messenger.css
@@ -170,7 +170,7 @@
     width: 190px;
 }
 
-.popup-message{
-    margin: 13px 0px 0px 0px;
-    background-color: #00a7d0;
-}
+/*.popup-message{*/
+    /*margin: 13px 0px 0px 0px;*/
+    /*background-color: #00a7d0;*/
+/*}*/
