làm đẹp mess + mini mess

--- a/scc-mvc/src/main/resources/templates/followticket.html
+++ b/scc-mvc/src/main/resources/templates/followticket.html
@@ -186,12 +186,12 @@
                 <div style="margin-top: 30px">
                 <span>
                     <h4 id="ticketstatus" style="text-align: center">
-                        <i class="fa fa-circle" aria-hidden="true" style="color:red"></i>
+                        <i class="fa fa-circle" aria-hidden="true" style="color:red;margin-right: 10px"></i>
                         Open
                     </h4>
                 </span>
                 <span style="text-align: center">
-                     <h4 id="ticketname" style="max-width: 250px;word-wrap: break-word;">Ticket Name</h4>
+                     <h3 id="ticketname" style="max-width: 250px;word-wrap: break-word; font-weight: bold; color: #4271ed">Ticket Name</h3>
                     <h4 id="dueday" style="max-width: 250px;word-wrap: break-word">Due:</h4>
 
                 </span>
@@ -225,8 +225,8 @@
             <!--</div>-->
             <div id="tickethistory" style="max-height: 100px;width: 250px;display: none;overflow: auto">
             </div>
-            <div style="border-top: solid 1px lightgray;width: 250px;margin-top:8px" >
-                <div id="ticketbutton" class="btn-group" style="margin-top: 10px;margin-left: 40px">
+            <div style="border-top: solid 1px lightgray;margin-top:8px;text-align: center" >
+                <div id="ticketbutton" class="btn-group" style="margin-top: 10px; display: inline-block">
 
                 </div>
             </div>
