--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -119,7 +119,7 @@
 .chat li span img {
     height: 30px;
     width: 30px;
-    border-radius: 3px;
+    border-radius: 50px;
     margin-right: 10px;
 }
 
@@ -143,13 +143,11 @@
     margin: 10px 10px 10px 0px;
     position: relative;
 
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
     border-radius: 50%;
 
-    -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, .2);
-    -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, .2);
-    box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, .2);
+    /*-webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, .2);*/
+    /*-moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, .2);*/
+   /*// box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, .2);*/
 }
 
 .sentTime {
@@ -450,7 +448,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .header-customer-name {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid lightgray;
     height: 46px;
     text-align: center;
     background-color: white;
