--- a/scc-mvc/src/main/resources/static/css/mini-messenger.css
+++ b/scc-mvc/src/main/resources/static/css/mini-messenger.css
@@ -76,6 +76,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    margin: 0px 10px 0px 10px;
 }
 
 .chat li {
@@ -86,9 +87,11 @@
 
 .chat li.left .chat-body {
     margin-left: 35px;
-    background-color: white;
+    background-color: gainsboro;
     padding: 5px 10px 5px 5px;
     border-radius: 5px;
+    min-width: 150px;
+    max-width: 200px;
 }
 
 .chat li.right .chat-body {
@@ -96,6 +99,8 @@
     margin-right: 35px;
     background-color: lightblue;
     border-radius: 5px;
+    min-width: 150px;
+    max-width: 200px;
 
 }
 
